# genact

./: .editorconfig  .gitignore  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Containerfile  Cross.toml  Dockerfile  LICENSE  Makefile  PULL_REQUEST_TEMPLATE.md  README  README.md  Trunk.toml  Web.toml  genact-273039cc4c5fcf46.js  genact-273039cc4c5fcf46_bg.wasm  genact-400ceccfc62c33eb.js  genact-400ceccfc62c33eb_bg.wasm  genact-47a9486109c2256e.js  genact-47a9486109c2256e_bg.wasm  genact-55f3002eb33932c4.js  genact-55f3002eb33932c4_bg.wasm  genact-5e95594ac0c31fe.js  genact-5e95594ac0c31fe_bg.wasm  genact-66a454e53ce9deb4.js  genact-66a454e53ce9deb4_bg.wasm  genact-73b23771c3d1a272.js  genact-73b23771c3d1a272_bg.wasm  genact-7780b558e688c8d9.js  genact-7780b558e688c8d9_bg.wasm  genact-81ed8a621c693ff5.js  genact-81ed8a621c693ff5_bg.wasm  genact-a687b37cff72f043.js  genact-a687b37cff72f043_bg.wasm  genact-b6ae31cfcf6f4587.js  genact-b6ae31cfcf6f4587_bg.wasm  genact-c596439ca434b54d.js  genact-c596439ca434b54d_bg.wasm  (+19 more)
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: build-release.yml  ci.yml  publish.yml
data/: ansible_roles.txt  ansible_tasks.txt  boot_hooks.txt  bootlog.txt  cfiles.txt  composer.txt  css_properties.txt  docker_packages.txt  docker_tags.txt  julia.csv  kernel.txt  llm_gpus.csv  llm_models.txt  os_releases.txt  packages.txt  rkhunter_checks.txt  rkhunter_checks_short.txt  rkhunter_infos.txt  rkhunter_rootkits.txt  rkhunter_tasks.txt  simcity.txt  terraform_aws_resources.txt  terraform_azure_resources.txt  terraform_gcp_resources.txt  terraform_ids.txt  web_apis.txt  wpt_categories.txt  wpt_tests.txt
genact/: __init__.py  module.py  term.py  util.py
genact/modules/: __init__.py  bootlog.py  botnet.py  bruteforce.py  download.py  dump.py  heartbeat.py  initialize.py
snippets/genact-ed06d6e43ae31548/: inline0.js  inline1.js
src/: args.rs  bootlog.rs  botnet.rs  cargo.rs  cc.rs  composer.rs  cryptomining.rs  data.rs  docker.rs  docker_build.rs  download.rs  generators.rs  io.rs  kernel_compile.rs  lib.rs  main.rs  memdump.rs  mkinitcpio.rs  parse_args.rs  simcity.rs  utils.rs  weblog.rs
src/modules/: ansible.rs  bootlog.rs  botnet.rs  bruteforce.rs  cargo.rs  cc.rs  codex.rs  composer.rs  cryptomining.rs  docker.rs  docker_build.rs  docker_image_rm.rs  download.rs  julia.rs  kernel_compile.rs  llm_training.rs  memdump.rs  mkinitcpio.rs  mod.rs  rkhunter.rs  simcity.rs  terraform.rs  uv.rs  weblog.rs  wpt.rs
static/: index.html
webstuff/: index.html
