[package]
name = "genact"
description = "A nonsense activity generator"
version = "1.0.0"
repository = "https://github.com/svenstaro/genact"
authors = ["Sven-Hendrik Haase <svenstaro@gmail.com>"]
license = "MIT"
readme = "README.md"
keywords = ["fake", "nonsense", "useless"]
categories = ["command-line-utilities", "command-line-interface"]
edition = "2018"

[profile.release]
lto = true
opt-level = 'z'
codegen-units = 1
strip = true

[dependencies]
anyhow = "1"
async-std = "1"
async-trait = "0.1"
chrono = { version = "0.4", features = ["wasmbind"] }
console_error_panic_hook = "0.1"
fake = { version = "2.4", features = ["chrono"] }
futures = "0.3"
getrandom = { version = "0.2", features = ["js"] }
humansize = "1"
humantime = "2"
instant = { version = "0.1", features = ["now", "wasm-bindgen"] }
js-sys = "0.3"
lazy_static = "1.4"
progress_string = "0.2"
rand = "0.8"
rand_distr = "0.4"
regex = "1.5"
url = "2.3"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
yansi = "0.5"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
async-std = { version = "1.12", features = ["attributes"] }
clap = { version = "3.2", features = ["derive", "wrap_help"] }
ctrlc = { version = "3.2", features = ["termination"] }
terminal_size = "0.2"

[dependencies.web-sys]
version = "0.3"
features = ["Window", "Location", "console"]
